--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^6.1.0
   firebase_auth: ^6.1.2
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
